--- a/depot/app/views/line_items/create.js.erb
+++ b/depot/app/views/line_items/create.js.erb
@@ -1,1 +1,1 @@
-$('.mytable').children().children().children('td:eq(1)').css("color","red");;
+$('.mytable').children().children( "tr:nth-last-child(2)" ).css({ color: "yellow", fontWeight: "bolder" });
