--- a/depot/app/views/users/_form.html.erb
+++ b/depot/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="depot_form" >
+
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -27,3 +29,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+</div>
